--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-      <meta content="no-cache, no-store, must-revalidate" http-equiv="Cache-Control" />
-      <meta content="no-cache" http-equiv="Pragma" />
-      <meta content="0" http-equiv="Expires" />
+    <meta
+      content="no-cache, no-store, must-revalidate"
+      http-equiv="Cache-Control"
+    />
+    <meta content="no-cache" http-equiv="Pragma" />
+    <meta content="0" http-equiv="Expires" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
